2010-07-13  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Unskip and add results for a test that is passing after r63176.

        * platform/gtk/Skipped:
        * platform/gtk/fast/text/shadow-translucent-fill-expected.checksum: Added.
        * platform/gtk/fast/text/shadow-translucent-fill-expected.png: Added.
        * platform/gtk/fast/text/shadow-translucent-fill-expected.txt: Added.

2010-07-13  Andreas Kling  <andreas.kling@nokia.com>

        Unreviewed. Rebaseline resize-from-plugin.html

        * platform/gtk/plugins/resize-from-plugin-expected.txt:
        * platform/qt/plugins/resize-from-plugin-expected.txt:
        * platform/win/plugins/resize-from-plugin-expected.txt:
        * plugins/resize-from-plugin-expected.txt:

2010-07-13  Andreas Kling  <andreas.kling@nokia.com>

        Unreviewed.

        Putting 2d.imageData.get.source.outside.html back on the mac skiplist
        since it fails on the bot for some reason.

        https://bugs.webkit.org/show_bug.cgi?id=41478

        * platform/mac/Skipped:

2010-07-13  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] results from resize-from-plugin.html are wrong
        https://bugs.webkit.org/show_bug.cgi?id=40879

        Reorder test contents to get same metrics on all platforms
        and unskip it on Qt, since it's now meeting the criteria of the test.

        * platform/gtk/plugins/resize-from-plugin-expected.txt:
        * platform/qt/Skipped:
        * platform/qt/plugins/resize-from-plugin-expected.txt:
        * platform/win/plugins/resize-from-plugin-expected.txt:
        * plugins/resize-from-plugin-expected.txt:
        * plugins/resize-from-plugin.html:

2010-07-13  Andreas Kling  <andreas.kling@nokia.com>

        Rubber-stamped by Simon Hausmann.

        [Qt] Unskip 6 canvas/philip tests for Qt

        * canvas/philip/tests/2d.gradient.radial.cone.front-expected.txt: