@@ -1216,6 +1216,10 @@ void GraphicsContext3D::getIntegerv(unsigned long pname, int* value)
     // Need to emulate IMPLEMENTATION_COLOR_READ_FORMAT/TYPE for GL.  Any valid
     // combination should work, but GL_RGB/GL_UNSIGNED_BYTE might be the most
     // useful for desktop WebGL users.
+    // Need to emulate MAX_FRAGMENT/VERTEX_UNIFORM_VECTORS and MAX_VARYING_VECTORS
+    // because desktop GL's corresponding queries return the number of components
+    // whereas GLES2 return the number of vectors (each vector has 4 components).
+    // Therefore, the value returned by desktop GL needs to be divided by 4.
     ensureContext(m_contextObj);
     switch (pname) {
     case IMPLEMENTATION_COLOR_READ_FORMAT:
@@ -1223,6 +1227,18 @@ void GraphicsContext3D::getIntegerv(unsigned long pname, int* value)
         break;
     case IMPLEMENTATION_COLOR_READ_TYPE:
         *value = GL_UNSIGNED_BYTE;
+        break;
+    case MAX_FRAGMENT_UNIFORM_VECTORS:
+        ::glGetIntegerv(GL_MAX_FRAGMENT_UNIFORM_COMPONENTS, value);
+        *value /= 4;
+        break;
+    case MAX_VERTEX_UNIFORM_VECTORS:
+        ::glGetIntegerv(GL_MAX_VERTEX_UNIFORM_COMPONENTS, value);
+        *value /= 4;
+        break;
+    case MAX_VARYING_VECTORS:
+        ::glGetIntegerv(GL_MAX_VARYING_FLOATS, value);
+        *value /= 4;
         break;
     default:
         ::glGetIntegerv(pname, value);
