@@ -1,3 +1,13 @@
+2010-07-10  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Darin Fisher.
+
+        Need to emulate MAX_VARYING_VECTORS/MAX_FRAGMENT_UNIFORM_VECTORs/MAX_VERTEX_UNIFORM_VECTORS for glGet
+        https://bugs.webkit.org/show_bug.cgi?id=42032
+
+        * platform/graphics/mac/GraphicsContext3DMac.mm:
+        (WebCore::GraphicsContext3D::getIntegerv): Emulate the enums.
+
 2010-07-13  Philippe Normand  <pnormand@igalia.com>
 
         Reviewed by Eric Carlson.
