@@ -1,3 +1,13 @@
+2010-07-10  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Darin Fisher.
+
+        Need to emulate MAX_VARYING_VECTORS/MAX_FRAGMENT_UNIFORM_VECTORs/MAX_VERTEX_UNIFORM_VECTORS for glGet
+        https://bugs.webkit.org/show_bug.cgi?id=42032
+
+        * fast/canvas/webgl/gl-get-calls-expected.txt: Add the test cases for the three enums.
+        * fast/canvas/webgl/gl-get-calls.html: Ditto.
+
 2010-07-13  Martin Robinson  <mrobinson@igalia.com>
 
         Unreviewed.
